Add javafx specific projects

--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,16 @@
     <relativePath>../../jbundle-parent</relativePath>
   </parent>
   
-    <groupId>org.jbundle.base.screen</groupId>
-    <artifactId>jbundle-view-swing-reactor</artifactId>
+    <groupId>org.jbundle.javafx.config</groupId>
+    <artifactId>jbundle-view-javafx-reactor</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
-    <name>jbundle-view-swing-reactor</name>
+    <name>jbundle-view-javafx-reactor</name>
   
   <modules>
     <module>view</module>
-    <module>control</module>
+    <module>helloworld</module>
   </modules>
 
   <repositories>
