Add javafx application class to helloworld example

--- a/helloworld/src/main/resources/org/jbundle/javafx/example/helloworld/javafx.properties
+++ b/helloworld/src/main/resources/org/jbundle/javafx/example/helloworld/javafx.properties
@@ -1,4 +1,4 @@
 # Web start Applet property file
 org.jbundle.util.osgi.webstart.appletClass=org.jbundle.javafx.example.helloworld.HelloWorldJavaFX
-org.jbundle.util.osgi.webstart.template=/docs/javafx.jnlp
+org.jbundle.util.osgi.webstart.template=/docs/javafxapplet.jnlp
 
