--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   
   <modules>
     <module>view</module>
-    <module>helloworld</module>
+    <module>example</module>
   </modules>
 
   <repositories>
