--- a/example/ensemble/pom.xml
+++ b/example/ensemble/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jbundle.javafx.example</groupId>
     <artifactId>jbundle-javafx-example-reactor</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>org.jbundle.javafx.example.ensemble</artifactId>
