Post release cleanup

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   
     <groupId>org.jbundle.javafx.config</groupId>
     <artifactId>jbundle-view-javafx-reactor</artifactId>
-    <version>0.9.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <name>jbundle-view-javafx-reactor</name>
@@ -27,7 +27,7 @@
   </scm>
 
   <modules>
-    <!-- module>view</module -->
+    <module>view</module>
     <module>example</module>
   </modules>
 
