--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <parent>
     <groupId>org.jbundle.config</groupId>
     <artifactId>jbundle-parent</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.1-SNAPSHOT</version>
     <relativePath>../../jbundle-parent</relativePath>
   </parent>
   
     <groupId>org.jbundle.javafx.config</groupId>
     <artifactId>jbundle-view-javafx-reactor</artifactId>
-    <version>1.0.0.2-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <name>jbundle-view-javafx-reactor</name>
@@ -27,7 +27,7 @@
   </scm>
 
   <modules>
-    <!-- module>view</module -->
+    <module>view</module>
     <module>example</module>
   </modules>
 
