--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   
     <groupId>org.jbundle.javafx.config</groupId>
     <artifactId>jbundle-view-javafx-reactor</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <name>jbundle-view-javafx-reactor</name>
