--- a/example/pom.xml
+++ b/example/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jbundle.javafx.config</groupId>
     <artifactId>jbundle-view-javafx-reactor</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
   </parent>
   
   <groupId>org.jbundle.javafx.example</groupId>
