--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jbundle.config</groupId>
     <artifactId>jbundle-parent</artifactId>
-    <version>1.3.8</version>
+    <version>1.3.9-SNAPSHOT</version>
     <relativePath>../../jbundle-parent</relativePath>
   </parent>
   
@@ -22,8 +22,8 @@
 
   <scm>
     <url>https://github.com/jbundle/javafx</url>
-    <connection>scm:git:git://github.com/jbundle/javafx</connection>
-    <developerConnection>scm:git:git@github.com:jbundle/javafx</developerConnection>
+    <connection>scm:git:https://github.com/jbundle/javafx</connection>
+    <developerConnection>scm:git:https://github.com/jbundle/javafx</developerConnection>
   </scm>
 
   <modules>
