--- a/example/helloworld/pom.xml
+++ b/example/helloworld/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jbundle.javafx.example</groupId>
     <artifactId>jbundle-javafx-example-reactor</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>org.jbundle.javafx.example.helloworld</artifactId>
